login and sign up page

--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -3,10 +3,24 @@ these are just partials of what the page is going to include, they are all rende
 inside a layout which is the main.handlebars file under the folder layouts -->
 
 <section class="card w-100">
+  <img src="./../utils/img/medication_Managers.gif" class="img-fluid" alt="...">
   <h3 class="card-header">Welcome!</h3>
   <div class="card-body">
+  <img src="./../utils/img/medication_Managers.gif" alt="home">
     <h4 class="card-title">Special title treatment</h4>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
   </div>
 </div>
 </section>
+<style>
+  .card-header{
+    background-color: rgb(27, 141, 248);
+    text-align: center;
+    padding: 20%;
+    background-image: url("./../utils/img/medication_Managers.gif");
+  }
+  .card-body{
+   
+background-color: yellow;
+  }
+</style>
