--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,4 +44,21 @@
     <script src="/js/logout.js"></script>
     {{/if}}
   </body>
+
+    <style>
+    * {
+	box-sizing: border-box;
+}
+
+body {
+	background: #f6f5f7;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	font-family: 'Montserrat', sans-serif;
+	height: 100vh;
+	margin: -20px 0 50px;
+}
+  </style>
 </html>
