--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,32 +1,40 @@
-<!-- These don't need the html tag because the way views work in handlebars,
-these are just partials of what the page is going to include, they are all rendered 
-inside a layout which is the main.handlebars file under the folder layouts -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Login</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
 
-<div class="row justify-space-between-md">
-  <div class="login-card w-50">
-    <h2 class="page-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <section class="form-group2">
-        <div class="form-group2">
-          <button class="btn btn-primary" type="submit">login</button>
+<div class="container">
+  <div class="row justify-content-md-center mt-5">
+    <div class="text-center"> <!-- Agrega la clase text-center aquí -->
+      <span role="img" aria-label="Pill"> 💊 </span>
+      <h1 class="h3 mb-3 fw-normal"> Please sign in</h1>
+    </div>
+    <div class="login-card col-md-6 border border-primary border-dark p-4">
+      <h2 class="page-title">Login</h2>
+      <form class="form login-form">
+        <div class="form-group">
+          <label for="email-login">Email:</label>
+          <input class="form-control" type="text" id="email-login" />
         </div>
-      </section>
-
-    </form>
-  </div>
-  <
-      </section>
-
-    </form>
+        <div class="form-group">
+          <label for="password-login">Password:</label>
+          <input class="form-control" type="password" id="password-login" />
+        </div>
+        <div class="form-group text-center"> 
+          <button class="btn btn-primary mt-2" type="submit">Login</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 
+
 <script src="./js/login.js"></script>
+
+</body>
+</html>
