--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,24 @@
     text-align: left;
     color: var(--light);
   }
+
+
+  
+  .pages {
+    text-decoration: none; 
+    color: #333; 
+    padding: 5px 10px; 
+    margin-right: 10px; 
+    border: 1px solid #333; 
+    border-radius: 5px; 
+}
+
+
+.pages:hover {
+    background-color: #333; 
+    color: #fff; 
+}
+  
   
   nav {
     display: flex;
@@ -181,6 +199,7 @@
     padding: 0.625rem;
     border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
   }
+  
   
   .card-body {
     font-size: 1.4rem;
