smtp server comp

--- a/views/medication.handlebars
+++ b/views/medication.handlebars
@@ -1,3 +1,4 @@
+
 <section>
     <h4>All medication currently scheduled. </h4>
     <table class="table table-success table-striped-columns ,table table-bordered">
@@ -132,3 +133,5 @@
     </table>
 
 </section>
+
+<button> <a href="/addMedication">Add medication</a></button>
