--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,16 @@
     justify-content: flex-start;
     background-color: var(--quatrinary);
   }
+
+  .card-header{
+    background-color: rgb(27, 141, 248);
+    text-align: center;
+    padding: 2%;
+  }
+  .card-body{
+   
+background-color: rgb(0, 255, 247);
+  }
   
   a {
     color: var(--dark);
