--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
 
 <div class="container">
   <div class="row justify-content-md-center mt-5">
-    <div class="text-center"> <!-- Agrega la clase text-center aquí -->
+    <div class="text-center"> 
       <span role="img" aria-label="Pill"> 💊 </span>
       <h1 class="h3 mb-3 fw-normal"> Please sign in</h1>
     </div>
@@ -32,7 +32,9 @@
     </div>
   </div>
 </div>
-
+<style>
+  
+</style>
 
 <script src="./js/login.js"></script>
 
