--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -2,13 +2,18 @@
 these are just partials of what the page is going to include, they are all rendered 
 inside a layout which is the main.handlebars file under the folder layouts -->
 
-<section class="card w-100">
-  <h3 class="card-header">Welcome!</h3>
-  <div class="card-body">
- 
-  <img src="/img/medication Managers.jpg" alt="home">
-    <h4 class="card-title">Special title treatment</h4>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-  </div>
+<div id="img-container">
+  <img src="https://www.medicarerights.org/wp-content/uploads/2023/10/Pills-prescription.png.webp">
 </div>
-</section>
+ <!-- <div class="card">
+  <div class="card-header">
+    Welcome!
+</div>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">Track your medication with ease.</p>
+    <a class="nav-link active"href="/login" class="pages">login</a>
+  </div>
+</div> -->
+
+
