--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,35 +9,38 @@
     <title> Medication Manager</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="/css/jass.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/css/login.css" />
+     <link rel="stylesheet" type="text/css" href="/css/jass.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" /> 
+    <link rel="stylesheet" type="text/css" href="/css/login.css" /> 
 
 
-    <link rel="stylesheet" type="text/css" href="../../public/css/jass.css"/>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css"/>
+   <link rel="stylesheet" type="text/css" href="../../public/css/jass.css"/>
+    <link rel="stylesheet" type="text/css" href="public/css/style.css"/> 
 
   </head>
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary py-4">
+
+    <!-- Example Code -->
+    
+        
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <span role="img" aria-label="Pill"> 💊 </span>
-        <a class="navbar-brand" href="#"> Medication Manager</a>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
+        <a class="navbar-brand" href="#">💊 Medication Manager</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 py-3">
+             <li class="nav-item d-flex flex-row align-items-center">
             {{#if logged_in}}
             <a href="/profile">profile</a> 
             <button class="no-button" id="logout">logout</button>
             {{else}}
-            <a href="/login" class="pages">login</a>
-            <a href="/signup" class="pages">SignUp</a> 
+              <a class="nav-link active"href="/login" class="pages">login</a>
+              <a class="nav-link active"href="/signup" class="pages">Signup</a>
             {{/if}}
             </li>
-            <li class="nav-item">
-            </li>
+          </ul>
         </div>
       </div>
     </nav>
