Connected the data to the medication pg and added the medication button function

--- a/views/medication.handlebars
+++ b/views/medication.handlebars
@@ -6,19 +6,24 @@
             <tr class="table-primary ">
                 <th scope="col">#</th>
                 <th scope="col">Medication Name</th>
-                <th scope="col">Last scheduled</th>
-                <th scope="col">Next scheduled</th>
+                <th scope="col">Dosage</th>
+                <th scope="col">Frequency</th>
+                <th scope="col">Description</th>
+                <th scope="col">Notes for Use</th>
                 <th scope="col"></th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="medications">
+            {{#each medications}}
             <tr>
                 <th scope="row">1</th>
-                <td>Advil</td>
-                <td>Today 11:30 Am</td>
-                <td>Today 4:00 PM </td>
+                <td>{{genericName}}</td>
+                <td>{{dosage}}</td>
+                <td>{{frequency}}</td>
+                <td>{{description}}</td>
+                <td>{{noteFromUser}}</td>
                 <td>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -40,16 +45,17 @@
                     </a>
                 </td>
 
-                <td> <a href="">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi
+                <td data-id="{{id}}"> <a href="">
+                        <svg class="delete" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi
                         bi-trash3" viewBox="0 0 16 16">
-                            <path
+                            <path class="delete"
                                 d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
                         </svg>
                     </a>
                 </td>
             </tr>
-            </tr>
+            {{/each}}
+            {{!-- </tr>
             <tr>
                 <th scope="row">2</th>
                 <td>Meta-Vitamin</td>
@@ -128,10 +134,11 @@
                         </svg>
                     </a>
                 </td>
-            </tr>
+            </tr> --}}
         </tbody>
     </table>
 
 </section>
 
-<button> <a href="/addMedication">Add medication</a></button>
+<button class="medForm"> <a href="/medication/addMedication">Add medication</a></button>
+<script src="/js/medicationLogic.js"></script>
