--- a/views/addMedication.handlebars
+++ b/views/addMedication.handlebars
@@ -1,8 +1,48 @@
 <!-- These don't need the html tag because the way views work in handlebars,
 these are just partials of what the page is going to include, they are all rendered 
 inside a layout which is the main.handlebars file under the folder layouts -->
+<section>
+  <h4>New Medication</h4>
+  <table class="table table-success table-striped-columns ,table table-bordered">
+        <thead>
+            <tr class="table-primary ">
+                <th scope="col">#</th>
+                <th scope="col">Medication Info</th>
+                {{!-- <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th> --}}
+            </tr>
+        </thead>
+   </table>
 
-<div class="row justify-space-between-md">
+
+   <form id="addmeds">
+     <div class="form-group">
+        <label for="generic_name">Name:</label>
+        <input class="form-input" type="text" id="generic_name" />
+      </div>
+      <div class="form-group">
+        <label for="dosage">Dosage:</label>
+        <input class="form-input" type="text" id="dosage" />
+      </div>
+      <div class="form-group">
+        <label for="frequency">Frequency:</label>
+        <input class="form-input" type="text" id="frequency" />
+      </div>
+         <div class="form-group">
+        <label for="description">Description:</label>
+        <input class="form-input" type="text" id="description" />
+      </div>
+         <div class="form-group">
+        <label for="note_from_user">Notes for Use:</label>
+        <input class="form-input" type="text" id="note_from_user" />
+      </div>
+       <button class="btn btn-primary" type="submit">Submit</button>
+   </form>     
+</section>
+  
+{{!-- <div class="row justify-space-between-md">
   <div class="login-card w-50">
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
@@ -45,6 +85,6 @@ inside a layout which is the main.handlebars file under the folder layouts -->
 
     </form>
   </div>
-</div>
+</div> --}}
 
-<script src="./js/login.js"></script>
+<script src="/js/addMedication.js"></script>
