--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
             <a href="/profile">profile</a> 
             <button class="no-button" id="logout">logout</button>
             {{else}}
-              <a class="nav-link active"href="/login" class="pages">login</a>
+              <a class="nav-link active"href="/login" class="pages">Login</a>
               <a class="nav-link active"href="/signup" class="pages">Signup</a>
             {{/if}}
             </li>
