--- a/views/medication.handlebars
+++ b/views/medication.handlebars
@@ -10,35 +10,37 @@
                 <th scope="col">Frequency</th>
                 <th scope="col">Description</th>
                 <th scope="col">Notes for Use</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-                <th scope="col"></th>
+                <th scope="col">Time</th>
+                <th scope="col">Check</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
             </tr>
         </thead>
         <tbody class="medications">
             {{#each medications}}
-            <tr>
+            <tr data-id="{{id}}">
                 <th scope="row">1</th>
                 <td>{{genericName}}</td>
                 <td>{{dosage}}</td>
                 <td>{{frequency}}</td>
                 <td>{{description}}</td>
                 <td>{{noteFromUser}}</td>
+                <td>{{timeStamp}}</td>
                 <td>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <input {{#if wasTaken}}checked {{/if}} data-current-status="{{#if wasTaken}}taken{{else}}not-taken{{/if}}" class="toggle-status form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         <label class="form-check-label" for="flexCheckDefault">
 
                         </label>
                     </div>
                 </td>
-                <td>
+                <td data-id="{{id}}">
                     <a href="">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        <svg class="edit" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-pencil-square" viewBox="0 0 16 16">
-                            <path
+                            <path class="edit"
                                 d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                            <path fill-rule="evenodd"
+                            <path class="edit" fill-rule="evenodd"
                                 d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
                         </svg>
 
