--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,33 +9,33 @@
     <title> Medication Manager</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-     <link rel="stylesheet" type="text/css" href="/css/jass.css" />
+<!--    <link rel="stylesheet" type="text/css" href="/css/jass.css" />-->
     <link rel="stylesheet" type="text/css" href="/css/style.css" /> 
     <link rel="stylesheet" type="text/css" href="/css/login.css" /> 
 
 
-   <link rel="stylesheet" type="text/css" href="../../public/css/jass.css"/>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css"/> 
+<!--   <link rel="stylesheet" type="text/css" href="../../public/css/jass.css"/>
+    <link rel="stylesheet" type="text/css" href="public/css/style.css"/> -->
 
   </head>
-  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
 
-    <!-- Example Code -->
-    
-        
+  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">💊 Medication Manager</a>
+
+        <a class="navbar-brand" href="/">💊 Medication Manager</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 py-3">
-             <li class="nav-item d-flex flex-row align-items-center">
+
+            <li class="nav-item d-flex flex-row align-items-center">
             {{#if logged_in}}
 <!--            <a href="/profile">profile</a> 
             <button class="no-button" id="logout">Logout</button>-->
-              <a class="nav-link active"href="/logout" class="pages">Logout</a>
+            <button id="logout" class="no-button">Logout</button>
             {{else}}
               <a class="nav-link active"href="/login" class="pages">Login</a>
               <a class="nav-link active"href="/login" class="pages">Signup</a>
@@ -48,7 +48,7 @@
     <div class="width-50%">
       {{{body}}}
     </div>
-        {{#if logged_in}}
+    {{#if logged_in}}
     <script src="/js/logout.js"></script>
     {{/if}}
     <div>
