fix: req.session.logged_in wasn't being passed to the rendered views. Added logic and will need to add to other files when PR'd

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -226,3 +226,14 @@ input {
 	width: 40px;
 }
 
+.no_button {
+	background: none;
+	border: none;
+	padding: 0;
+	cursor: pointer;
+	text-decoration: none;
+	font-size: 100%;
+	transition: color 0.1s;
+	margin-left: 16px;
+  }
+  
