--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,9 +33,8 @@
 
             <li class="nav-item d-flex flex-row align-items-center">
             {{#if logged_in}}
-<!--            <a href="/profile">profile</a> 
-            <button class="no-button" id="logout">Logout</button>-->
-            <button id="logout" class="no-button">Logout</button>
+ <!--          <a href="/profile">profile</a> -->
+          <button id="logout" class="no-button">Logout</button>
             {{else}}
               <a class="nav-link active"href="/login" class="pages">Login</a>
               <a class="nav-link active"href="/login" class="pages">Signup</a>
