all homepage styling

--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -5,15 +5,19 @@ inside a layout which is the main.handlebars file under the folder layouts -->
 <div id="img-container">
   <img src="https://www.medicarerights.org/wp-content/uploads/2023/10/Pills-prescription.png.webp">
 </div>
- <!-- <div class="card">
-  <div class="card-header">
+<div id="form-container">
+  <div id="welcome-card" class="card">
+  <div id="card-title" class="card-header">
     Welcome!
 </div>
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">Track your medication with ease.</p>
-    <a class="nav-link active"href="/login" class="pages">login</a>
+  <div id="card-body" class="card-body">
+    <h5  id="card-h5" class="card-title">Signup or login to see your medication</h5>
+    <p id="card-p" class="card-text">Track your medication with ease, and never be late on your Med's.</p>
+    <a id="card-btn" class="nav-link active"href="/login" class="pages">login</a>
   </div>
-</div> -->
-
-
+</div> 
+</div>
+<footer id="footer">
+  <p id="footer-text">Author's: Jacob Kaufenberg, Vicki Dunlop, Teddy Assefa, Jen Hill, Maria Jones-Suarez </p>
+  <p id="info-p"><a id="info-a"href="mailto:hege@example.com">hege@example.com</a></p>
+</footer>
