--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,25 +29,109 @@
 background-color: rgb(0, 255, 247);
   } */
 
+  #welcome-card{
+    background-color: #f78888;
+    border: 2px ;
+    
+  }
+
+  #card-title{
+    background-color: #ececec;
+    color: black;
+    text-align: center;
+    border-radius: 5px;
+    font-size: 30px;
+    
+  }
+
+  #card-h5{
+    padding: 5px;
+    text-align: center;
+  }
+
+  #card-btn{
+    text-align: center;
+    font-size: 25px;
+    background-color: #ececec;
+    margin: 50px;
+    border-radius: 5px;
+  }
+
+  #card-btn:hover{
+    background-color: #f3d350;
+    border-radius: 10px;
+  }
+
   .img-container {
     position: relative;
     display: inline-block;
     width: 100%;
+    
 }
 
 .card {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 350px;
+    width: 300px;
+    top: 50%; /* Adjust as needed */
+    left: 10%;
+    transform: translate(0, -50%);
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 8px;
+    float: left; 
+}
+.navbar{
+  padding: 0px;
+  padding-bottom: 5px;
 }
 
-.card {
-   
+#navbar {
+  background-color: #ececec;
+  padding-bottom: 5px;
+  border-radius: 10px;
 }
+
+#title{
+  padding: 4px;
+  font-size: 28px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#title:hover{
+  background-color: #90ccf4;
+  border-radius: 10px;
+}
+
+
+
+#navbutton{
+  font-size: 20px;
+  margin-left: 520px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
+#loginbtn{
+  margin-right: 30px;
+}
+
+#loginbtn:hover{
+  background-color: #90ccf4;
+  border-radius: 10px;
+}
+#signupbtn:hover{
+  background-color: #90ccf4;
+  border-radius: 10px;
+}
+
+#footer{
+  background-color: #90ccf4;
+  padding: 5px;
+  margin-top: 5px;
+
+}
+
   
   a {
     color: var(--dark);
