--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,15 +26,14 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 py-3">
              <li id="navbutton" class="nav-item d-flex flex-row align-items-center">
             {{#if logged_in}}
- <!--          <a href="/profile">profile</a> -->
-          <button id="logout" class="no-button">Logout</button>
+        <button class="btn-no-style" id="logout">Logout</button>
             {{else}}
 
               <a id="loginbtn" class="nav-link active"href="/login" class="pages">Login</a>
               <a id="signupbtn" class="nav-link active"href="/signup" class="pages">Signup</a>
 
-              <a class="nav-link active"href="/login" class="pages">Login</a>
-              <a class="nav-link active"href="/login" class="pages">Signup</a>
+<!--              <a class="nav-link active"href="/login" class="pages">Login</a>
+              <a class="nav-link active"href="/login" class="pages">Signup</a>-->
 
             {{/if}}
             </li>
