--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,58 +1,57 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="jquery-3.7.1.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title> Medication Manager</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-     <link rel="stylesheet" type="text/css" href="/css/jass.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" /> 
-    <link rel="stylesheet" type="text/css" href="/css/login.css" /> 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="jquery-3.7.1.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <title> Medication Manager</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="/css/jass.css" />
+  <link rel="stylesheet" type="text/css" href="/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="/css/login.css" />
 
 
-   <link rel="stylesheet" type="text/css" href="../../public/css/jass.css"/>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css"/> 
+  <link rel="stylesheet" type="text/css" href="../../public/css/jass.css" />
+  <link rel="stylesheet" type="text/css" href="public/css/style.css" />
 
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div id="navbar" class="container-fluid">
-        <a id="title" class="navbar-brand" href="#">💊 Medication Manager</a>
-        
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 py-3">
-             <li id="navbutton" class="nav-item d-flex flex-row align-items-center">
-            {{#if logged_in}}
-<!--            <a href="/profile">profile</a> 
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div id="navbar" class="container-fluid">
+      <a id="title" class="navbar-brand" href="#">💊 Medication Manager</a>
+
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 py-3">
+        <li id="navbutton" class="nav-item d-flex flex-row align-items-center">
+          {{#if logged_in}}
+          <!--            <a href="/profile">profile</a> 
             <button class="no-button" id="logout">Logout</button>-->
-              <a class="nav-link active"href="/logout" class="pages">Logout</a>
-            {{else}}
+          <a class="nav-link active" href="/logout" class="pages">Logout</a>
+          {{else}}
 
-              <a id="loginbtn" class="nav-link active"href="/login" class="pages">Login</a>
-              <a id="signupbtn" class="nav-link active"href="/signup" class="pages">Signup</a>
+          <a id="loginbtn" class="nav-link active" href="/login" class="pages">Login</a>
+          <span class="divider"></span> <!-- Línea divisoria -->
+          <a id="signupbtn" class="nav-link active" href="/signup" class="pages">Logout</a>
 
-              <a class="nav-link active"href="/login" class="pages">Login</a>
-              <a class="nav-link active"href="/login" class="pages">Signup</a>
+          {{/if}}
+        </li>
+      </ul>
 
-            {{/if}}
-            </li>
-          </ul>
-        
-      </div>
-    </nav>
-  
-    <div class="width-50%">
-      {{{body}}}
     </div>
-        {{#if logged_in}}
-    <script src="/js/logout.js"></script>
-    {{/if}}
-    <div>
-  </body>
+  </nav>
+
+  <div class="width-50%">
+    {{{body}}}
+  </div>
+  {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
+  <div>
+</body>
 
 
 </html>
-
