--- a/views/medication.handlebars
+++ b/views/medication.handlebars
@@ -1,5 +1,5 @@
 <section>
-    <h4>All medication currently scheduled. </h4>
+    <h4 id="med-header">All medication currently scheduled. </h4>
     <table class="table table-success table-striped-columns ,table table-bordered">
         <thead>
             <tr class="table-primary ">
@@ -141,5 +141,5 @@
 
 </section>
 
-<button class="medForm"> <a href="/medication/addMedication">Add medication</a></button>
+<button id="med-btn" class="medForm"> <a href="/medication/addMedication">Add medication</a></button>
 <script src="/js/medicationLogic.js"></script>
